# glider-engine

./: Cargo.toml
.github/workflows/: rust.yml
.luau/: api.d.luau
assets/scripts/: init.luau
src/: lib.rs  main.rs
src/core/: animation.rs  assets.rs  ecs.rs  input.rs  mod.rs  physics.rs  renderer.rs  scripting.rs
src/editor/: build.rs  console_panel.rs  dock.rs  dock_layout.rs  dock_tree.rs  editor_state.rs  editor_ui.rs  fields.rs  file_system_panel.rs  game_view.rs  hierarchy_panel.rs  icons.rs  mod.rs  panel.rs  persistence.rs  project_panel.rs  properties_panel.rs  script_editor.rs  splitter.rs  status_bar.rs  tab_bar.rs  theme.rs  toolbar.rs  viewport.rs
src/instance/: mod.rs  registry.rs  sandbox.rs  script_runtime.rs
src/scenegraph/: commands.rs  luau.rs  mod.rs  serialize.rs
