[package]
name = "glider"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.19.0-rc.2", features = [ # lite features since its just luau testing
    "async_executor",
    "bevy_log",
    "bevy_state",
    "multi_threaded",
    "reflect_auto_register",
], default-features = false }
avian2d = { git = "https://github.com/avianphysics/avian", rev = "a3b0799", optional = true }
mluau = { git = "https://github.com/mluau/mluau" }
lasso = "0.7"
smallvec = "1.13"

[features]
default = ["render"]
render = ["bevy/2d", "dep:avian2d"]
