[package]
name = "glider"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.19.0-rc.2", features = [
    "async_executor",
    "bevy_log",
    "bevy_state",
    "multi_threaded",
    "reflect_auto_register",
], default-features = false }
avian2d = { git = "https://github.com/avianphysics/avian", rev = "a3b0799", optional = true }
bevy_luau = { package = "bevy-luau", git = "https://github.com/Glide-2D/bevy-luau" }
lasso = "0.7.1"
smallvec = "1.13.1"
mluau = { git = "https://github.com/mluau/mluau", version = "0.11.5", features = ["luau-vector4"] }

[features]
default = ["render"]
render = ["bevy/2d", "dep:avian2d"]
